@@ -292,8 +292,6 @@ public:
     virtual TransformationMatrix absoluteTransform() const;
 #endif
 
-    virtual bool isEditable() const;
-
     bool isAnonymous() const { return m_isAnonymous; }
     void setIsAnonymous(bool b) { m_isAnonymous = b; }
     bool isAnonymousBlock() const
